Updated sbt and scala versions